moved foreground to a better div and repositioned it. Also fixed the large whitespace below the main container div by adding an overflow and inherited height properties to the main container

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html{
+    height: 650px; 
+    margin-bottom:0px;
+    padding-bottom: 0px;
+    border-bottom: 0px;
+}
 body{
 	background-image: none;
 	margin:0 0;
@@ -8,6 +14,8 @@ body{
 .main-container{
 	z-index:10;
     position: relative;
+    height: inherit;
+    overflow: hidden;
 }
 
 #banner{
@@ -62,6 +70,7 @@ body{
 }
 #foreground{
     position: absolute;
-    padding-left:30px;
-    top:-330px;
+    padding-left:310px;
+    top:50px;
+    width: 100%;
 }
